--- a/src/components/BaseLayout.astro
+++ b/src/components/BaseLayout.astro
@@ -127,7 +127,7 @@ const siteUrl = new URL(Astro.site);
       logo: new URL("/images/logo.webp", siteUrl).href,
       description: "Solusi laser cutting profesional dengan teknologi terdepan di Jawa Barat",
       telephone: "+62 851 6569 3179",
-      email: "info@tepatlaser.com",
+      email: "info@rajacuttinglaser.com",
       address: {
         "@type": "PostalAddress",
         streetAddress: "Jl. Raya Serang No. 123",
@@ -138,9 +138,9 @@ const siteUrl = new URL(Astro.site);
       },
       openingHours: "Mo-Sa 08:00-17:00",
       sameAs: [
-        "https://facebook.com/tepatlaser",
-        "https://instagram.com/tepatlaser",
-        "https://youtube.com/tepatlaser",
+        "https://facebook.com/rajacuttinglaser",
+        "https://instagram.com/rajacuttinglaser",
+        "https://youtube.com/rajacuttinglaser",
         
       ],
       areaServed: ["Serang", "Tangerang", "Cilegon", "Pandeglang", "Lebak"],
